# gridfinity-bucket-designer

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
backend/: cad.py  legacy_cad.py  main.py  models.py  openscad.py  validate.py
backend/scad/: baseplate.scad  overflow.scad  standard.scad
frontend/: app.js  index.html  preview.js  style.css
tests/: conftest.py  test_api.py  test_backend.py  test_baseplate.py  test_legacy_fallback.py  test_models.py  test_openscad_render.py  test_split.py  test_validate.py
web/: DEPLOY.md  README.md  app.js  index.html  package-lock.json  package.json  playwright.config.js  style.css  vitest.config.js
web/scad/: baseplate.scad  overflow.scad  standard.scad
web/scripts/: precompute.py
web/src/: cad.js  models.js  openscad-worker.js  openscad.js  preview.js  split.js  validate.js
web/tests/e2e/: render.spec.js
web/tests/unit/: cad.test.js  split.test.js  validate.test.js
